2014-07-31  Jer Noble  <jer.noble@apple.com>

        REGRESSION(??): [iOS] Disabling MediaPlaybackRequiresUserGesture does not remove user gesture requirement for entering full screen.
        https://bugs.webkit.org/show_bug.cgi?id=135443

        Reviewed by Dean Jackson.

        Allow full screen mode to be entered without a user gesture if the gesture requirement for media playback
        has been unset.

        * html/HTMLMediaElement.cpp:
        (WebCore::HTMLMediaElement::HTMLMediaElement):

2014-07-31  Andrei Bucur  <abucur@adobe.com>

        [CSS Multicolumn] Clear the lines when switching to multi-column layout
        https://bugs.webkit.org/show_bug.cgi?id=135127

        Reviewed by Alexandru Chiculita.

        When switching an element to multi-column layout it becomes a container of block
        children. When this happens the existing line boxes must be deleted in addition
        to clearing the hasInlineChildren flag.

        Tests: fast/multicol/inline-container-to-multicol.html
               fast/multicol/inline-container-to-multicol-float.html
               fast/multicol/inline-container-to-multicol-positioned.html

        * rendering/RenderBlockFlow.cpp:
        (WebCore::RenderBlockFlow::createMultiColumnFlowThread):

2014-07-30  Andreas Kling  <akling@apple.com>

        PropertyName's internal string is always atomic.
        <https://webkit.org/b/135451>

        Use PropertyName::publicName() directly instead of taking the slow route
        through AtomicString::findStringWithHash().

        These strings are always atomic, and findStringWithHash() would trudge
        through a full hash lookup just to discover that indeed, they are!

        Reviewed by Benjamin Poulain.

        * bindings/js/JSDOMBinding.cpp:
        (WebCore::findAtomicString): Deleted.
        * bindings/js/JSDOMBinding.h:
        * bindings/js/JSDOMWindowCustom.cpp:
        (WebCore::namedItemGetter):